# vrg_demo

./: .gitignore  CMakeLists.txt  README.md  fbvp_polynom.py  fbvp_simpson.py
src/: main.cpp
src/fbvp/: fbvp.hpp  finite_diff.hpp  ode_elements.hpp  test.hpp  trajectory.hpp
src/other_examples/: hit_moving_target.cpp
test/: test_finite_diff.hpp  test_main.cpp
